<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondLine"
        android:textColor="@color/btnMain"
        android:textSize="@dimen/secondLineSize"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:text=""
        tools:text="2+5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainLine"
        android:textColor="@color/btnMain"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:textSize="@dimen/mainLineSize"
        android:text=""
        tools:text="255"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:gravity="fill_vertical">
        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_weight="1">
            <Button
                android:layout_height="match_parent"
                android:id="@+id/clear"
                android:text="@string/clear"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/changeSign"
                android:text="@string/changeSign"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/pocent"
                android:text="@string/procent"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/division"
                android:text="@string/division"
                android:background="@color/btnOperation"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/btnTextSize"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_weight="1">
            <Button
                android:layout_height="match_parent"
                android:id="@+id/seven"
                android:text="@string/seven"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/eight"
                android:text="@string/eight"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/nine"
                android:text="@string/nine"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/multiply"
                android:text="@string/multiplication"
                android:background="@color/btnOperation"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/btnTextSize"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_weight="1">
            <Button
                android:layout_height="match_parent"
                android:id="@+id/four"
                android:text="@string/four"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/five"
                android:text="@string/five"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/six"
                android:text="@string/six"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/minus"
                android:text="@string/minus"
                android:background="@color/btnOperation"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/btnTextSize"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_weight="1">
            <Button
                android:layout_height="match_parent"
                android:id="@+id/one"
                android:text="@string/one"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/two"
                android:text="@string/two"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/three"
                android:text="@string/three"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>
            <Button
                android:layout_height="match_parent"
                android:id="@+id/plus"
                android:text="@string/plus"
                android:background="@color/btnOperation"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/btnTextSize"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_height="match_parent"
                android:id="@+id/zero"
                android:text="@string/zero"
                android:background="@color/btnMain"
                android:textColor="@color/background"
                android:layout_span="3"
                android:textSize="@dimen/btnTextSize"
                android:layout_marginRight="1dp"/>


            <Button
                android:layout_height="match_parent"
                android:id="@+id/result"
                android:text="@string/result"
                android:background="@color/btnOperation"
                android:textColor="@color/btnMain"
                android:textSize="@dimen/btnTextSize"
                android:layout_column="3"/>
        </TableRow>
    </TableLayout>

</LinearLayout>